# EnChess

./: .gitignore  CMakeLists.txt  EnChess.sh  Makefile  Makefile.old  README.md  build_run.sh  en-chess
include/: bitboard.h  definitons.h  events.h  lifecycle.h  load.h  render.h
src/: definitons.h  events.h  lifecycle.h  load.h  main  main.c  render.h
